objects/DeactivateChatterPostSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings to deactivate Chatter posts for individual objects.</description>
    <fields>
        <fullName>Deactivate_All_Admin_Chatter_Posts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivate all Chatter posts for this object if the user is an administrator.</description>
        <inlineHelpText>Deactivate all Chatter posts for this object if the user is an administrator.</inlineHelpText>
        <label>Deactivate All Admin Chatter Posts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_non_Admin_Chatter_Delete_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivate Chatter posting when deleting records for the object.</description>
        <inlineHelpText>Deactivate Chatter posting when deleting records for the object.</inlineHelpText>
        <label>Deactivate non-Admin Chatter Delete Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_non_Admin_Chatter_Insert_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivate Chatter posting when inserting records for the object.</description>
        <inlineHelpText>Deactivate Chatter posting when inserting records for the object.</inlineHelpText>
        <label>Deactivate non-Admin Chatter Insert Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_non_Admin_Chatter_Update_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deactivate Chatter posting when updating records for the object.</description>
        <inlineHelpText>Deactivate Chatter posting when updating records for the object.</inlineHelpText>
        <label>Deactivate non-Admin Chatter Update Post</label>
        <type>Checkbox</type>
    </fields>
    <label>Deactivate Chatter Post Settings</label>
</CustomObject>